objects/Compensation_Adjustment__c.object
<CustomObject>
    <description>History of all adjustments made to the employees compensation.</description>
    <fields>
        <fullName>Adjustment_Amount__c</fullName>
        <description>Amount of the adjustment</description>
        <label>Adjustment Amount</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Employee</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Compensation Adjustment</relationshipLabel>
        <relationshipName>R00N300000018gZiEAI</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date_Adj__c</fullName>
        <description>Date of adjustment</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>New_Compensation__c</fullName>
        <formula>Previous_Compensation__c + Adjustment_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Compensation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_Compensation__c</fullName>
        <description>Hourly or salary wage prior to adjustment</description>
        <label>Previous Compensation</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <description>Notes about adjustment</description>
        <label>Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Type_of_Adjustment__c</fullName>
        <description>What type of adjustment was it.</description>
        <label>Type of Adjustment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Salary</fullName>
                    <default>true</default>
                    <label>Salary</label>
                </value>
                <value>
                    <fullName>Hourly Wage</fullName>
                </value>
                <value>
                    <fullName>Commision</fullName>
                </value>
                <value>
                    <fullName>Bonus</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Compensation Adjustment</label>
    <nameField>
        <label>Adjustment</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Compensation Adjustments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>